# concordium

./: README.md
contracts/bictory-cis1-nft-auction/: Cargo.toml  README.md
contracts/bictory-cis1-nft-auction/docs/: internal_api.md  overview.md
contracts/bictory-cis1-nft-auction/parameters/: viewInternalValue.json
contracts/bictory-cis1-nft-auction/src/: contract.rs  events.rs  external.rs  lib.rs  nft.rs  state.rs
contracts/bictory-cis1-nft-listing/: Cargo.toml  README.md
contracts/bictory-cis1-nft-listing/docs/: internal_api.md  overview.md
contracts/bictory-cis1-nft-listing/src/: contract.rs  events.rs  external.rs  nft.rs  state.rs
contracts/bictory-config/: Cargo.toml
contracts/bictory-config/parameters/: address.json
contracts/bictory-config/src/: contract.rs  events.rs  impls.rs  lib.rs  structs.rs
contracts/bictory-send-ccd/: Cargo.toml
contracts/bictory-send-ccd/parameters/: send.json
contracts/bictory-send-ccd/src/: contract.rs  events.rs  impls.rs  structs.rs
contracts/bictory-storage/: Cargo.toml  debug.sh
contracts/bictory-storage/parameters/: get.json  insert.json  remove.json  update.json  updateAuthority.json  updateWriter.json  viewWriters.json
contracts/bictory-storage/src/: lib.rs  state.rs
contracts/cns/: cns_structure.puml
contracts/cns/bictory-cns/: Cargo.toml  README.md  reserve_names.sh
contracts/cns/bictory-cns/docs/: internal_api.md  overview.md
contracts/cns/bictory-cns/parameters/: createSubdomain.json  extend.json  init.json  register.json  resolve.json  setAddress.json  setData.json  updateInternalValue.json  viewAuthority.json  viewInternalValue.json
contracts/cns/bictory-cns/src/: contract.rs  external.rs  lib.rs  state.rs
contracts/cns/cns-nft/: Cargo.toml  README.md  debug.sh
contracts/cns/cns-nft-cis2/: Cargo.toml
contracts/cns/cns-nft-cis2/docs/: internal_api.md  overview.md
contracts/cns/cns-nft-cis2/parameters/: getTokenExpiry.json  init.json  lend.json  register.json  updateOperator.json
contracts/cns/cns-nft-cis2/src/: contract.rs  events.rs  external.rs  state.rs  storage.rs
contracts/cns/cns-nft/parameters/: bal.json  balanceExpiry.json  getTokenExpiry.json  getTokenInfo.json  init.json  operatorOf.json  transfer.json  viewAuthority.json  viewInternalValue.json
contracts/cns/cns-nft/src/: contract.rs  events.rs  external.rs  lib.rs  state.rs  storage.rs
contracts/cns/price-oracle/: Cargo.toml  README.md
contracts/cns/price-oracle/docs/: internal_api.md  overview.md
contracts/cns/price-oracle/parameters/: 0.json  getYearlyDomainPrice.json  init.json  setYearlyDomainPrice.json
contracts/cns/price-oracle/src/: contract.rs  events.rs  external.rs  lib.rs  state.rs
contracts/nft-v0/: README.md
contracts/nft-v0/contracts/bictory-auction/: Cargo.toml  README.md  debug.sh
contracts/nft-v0/contracts/bictory-auction/parameters/: init.json
contracts/nft-v0/contracts/bictory-auction/src/: contract.rs  events.rs  lib.rs  structs.rs
contracts/nft-v0/contracts/bictory-config/: Cargo.toml  debug.sh
contracts/nft-v0/contracts/bictory-listing/: Cargo.toml  README.md
contracts/nft-v0/contracts/bictory-nft/: Cargo.toml  README.md  debug.sh
contracts/nft-v0/contracts/bictory-send-ccd/: Cargo.toml  debug.sh
contracts/nft-v0/contracts/bictory-set-for-sale/: Cargo.toml
contracts/nft-v0/contracts/bictory-set-for-sale/parameters/: set_for_sale.json
contracts/nft-v0/contracts/bictory-set-for-sale/src/: contract.rs  events.rs  impls.rs  lib.rs  structs.rs
contracts/nft-v0/utils/commons/: Cargo.toml
contracts/nft-v0/utils/commons/src/: constants.rs  errors.rs  lib.rs  types.rs
contracts/nft-v0/utils/commons/src/structs/: account.rs  mod.rs  token.rs
contracts/nft-v1/bictory-auction/: Cargo.toml  README.md
contracts/nft-v1/bictory-auction/parameters/: init.json
contracts/nft-v1/bictory-auction/src/: contract.rs  impls.rs  lib.rs  structs.rs
contracts/nft-v1/bictory-listing/: Cargo.toml  README.md
contracts/nft-v1/bictory-listing/parameters/: buy.json  list.json  updatePrice.json  view.json
contracts/nft-v1/bictory-listing/src/: contract.rs  events.rs  helper.rs  lib.rs  (+2 more)
contracts/nft-v1/bictory-nft/: Cargo.toml  README.md  debug.sh
contracts/nft-v2/bictory-auction/: Cargo.toml  README.md
contracts/nft-v2/bictory-auction/parameters/: init.json
contracts/nft-v2/bictory-auction/src/: contract.rs  events.rs  lib.rs  structs.rs
contracts/nft-v2/bictory-listing/: Cargo.toml  README.md
contracts/nft-v2/bictory-nft/: Cargo.toml  README.md  debug.sh
contracts/nft-v2/bictory-nft/parameters/: bal.json  init.json  mint1.json  mint3.json  operatorOf.json  set_for_sale.json  transfer.json  updateOperator.json  updatePrice.json
contracts/nft-v2/bictory-nft/src/: constants.rs  contract.rs  events.rs  helper.rs  impls.rs  lib.rs  structs.rs
contracts/proxy/bictory-nft-proxy/: Cargo.toml
contracts/proxy/bictory-nft-proxy/parameters/: init.json
contracts/proxy/bictory-nft-proxy/src/: lib.rs
contracts/proxy/generic-proxy/: Cargo.toml
contracts/proxy/generic-proxy/src/: lib.rs
docs/: documentation_format.md
docs/specs/: authority.md  cis_royalty.md
utils/commons/: Cargo.toml
utils/commons-v1/: Cargo.toml
utils/commons-v1/src/: calculations.rs  errors.rs  lib.rs  price_oracle.rs  storage.rs  types.rs
utils/commons-v1/src/structs/: percentage.rs  royaly_distribution_shares.rs
utils/commons-v1/src/structs/bictory_nft/: burn.rs  mint.rs  view.rs
utils/commons-v1/src/structs/cns/: mod.rs
utils/commons-v2/: Cargo.toml
utils/commons-v2/src/: authority.rs  errors.rs  storage.rs  test.rs  types.rs
utils/commons-v2/src/structs/: mod.rs
utils/commons-v2/src/structs/bictory_nft/: burn.rs  mint.rs  token.rs  view.rs
utils/commons-v2/src/structs/cns/: price_oracle.rs
utils/commons-v2/src/structs/storage/: mod.rs  storage.rs
utils/commons/src/: authority.rs  cns_nft.rs  constants.rs  errors.rs  lib.rs  types.rs
utils/commons/src/structs/bictory_nft/: account.rs  burn.rs  mint.rs  mod.rs  price.rs  view.rs
utils/commons/src/structs/cns/: cns_nft.rs
(+48 files in other folders)
