[package]
name = "bictory-storage"
version = "0.1.0"
edition = "2018"

[dependencies]
concordium-std = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", rev = "207bc11ee22fc5392053439d055a9a56e66cc1b6", package = "concordium-std", default-features = false }
commons = { path = "../../utils/commons", default-features = false }

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
panic = "abort"

