[package]
name = "commons-v1"
version = "1.0.0"
authors = ["Tarun Jaiswal <tarunjais28@gmail.com>"]
edition = "2018"

[features]
default = []
std = ["concordium-std/std", "concordium-cis1/std"]

[dependencies]
concordium-cis1 = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", rev = "b26f19676d756d804034fb694ad717332612e38c", package = "concordium-cis1", default-features = false }
concordium-std = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", rev = "b26f19676d756d804034fb694ad717332612e38c", package = "concordium-std", default-features = false }

[lib]
crate-type=["rlib"]

[profile.release]
codegen-units = 1
opt-level = "z"
