[package]
name = "cns-nft"
version = "0.1.0"
authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@bictory.io>"]
edition = "2018"

[features]
default = []
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-cis2 = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", tag = "releases/concordium-cis2/1.2.0", package = "concordium-cis2", default-features = false }
concordium-std = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", tag = "releases/concordium-cis2/1.2.0", package = "concordium-std", default-features = false }

commons = { path = "../../../utils/commons-v2", default-features = false }

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1

[profile.dev]
codegen-units = 1
panic = "abort"
