[package]
name = "bictory-auction"
version = "1.0.0"
authors = ["Tarun Jaiswal <tarunjais28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
libc = { version = "0.2.14", default-features = false }
concordium-cis2 = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", rev = "207bc11ee22fc5392053439d055a9a56e66cc1b6", package = "concordium-cis2", default-features = false }
concordium-std = { git = "https://github.com/Concordium/concordium-rust-smart-contracts", rev = "207bc11ee22fc5392053439d055a9a56e66cc1b6", package = "concordium-std", default-features = false }
commons = { path = "../../../utils/commons", default-features = false }

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.dev]
codegen-units = 1
opt-level = "z"
panic = "abort"
